--- a/package.json
+++ b/package.json
@@ -9,13 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-navigation/native": "^6.1.14",
+    "@react-navigation/native-stack": "^6.9.22",
+    "@reduxjs/toolkit": "^2.2.1",
     "expo": "~50.0.8",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.8.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-heroicons": "^4.0.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screen-wrapper": "^1.0.4",
+    "react-native-screens": "~3.29.0",
+    "react-native-snackbar": "^2.6.2",
+    "react-native-svg": "14.1.0",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
